syntax = "proto3";

service Adservice {
    rpc CreateAd (CreateAdRequest) returns (CreateAdResponse);
    rpc GetAdById (GetAdRequest) returns (AdResponse);
    rpc ServeAd (ServeAdRequest) returns (AdResponse);
}

message Ad {
    string id = 1;
    string title = 2;
    string description = 3;
    string url = 4;
}

message CreateAdRequest {
    string title = 1;
    string description = 2;
    string url = 3;
}

message CreateAdResponse {
    string id = 1;
}

message GetAdRequest {
    string id = 1;
}

message AdResponse {
    Ad ad = 1;
}

message ServeAdRequest {
    string id = 1;
}
